--- a/oes-start/pom.xml
+++ b/oes-start/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
+        <groupId>org.oes</groupId>
         <artifactId>OES</artifactId>
-        <groupId>cn.edu.hit</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -51,10 +51,10 @@
             <artifactId>druid-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- oes 项目模块 -->
         <dependency>
-            <groupId>cn.edu.hit</groupId>
+            <groupId>org.oes</groupId>
             <artifactId>oes-biz</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
