--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.edu.hit</groupId>
+    <groupId>org.oes</groupId>
     <artifactId>OES</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
@@ -30,6 +30,18 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- oes 项目模块 -->
+            <dependency>
+                <groupId>org.oes</groupId>
+                <artifactId>oes-biz</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.oes</groupId>
+                <artifactId>oes-common</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
