--- a/oes-biz/pom.xml
+++ b/oes-biz/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>oes-biz</artifactId>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -23,6 +23,7 @@
             <artifactId>oes-common</artifactId>
         </dependency>
 
+        <!-- 数据库相关 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
