--- a/oes-start/src/main/resources/application-prod.yml
+++ b/oes-start/src/main/resources/application-prod.yml
@@ -29,6 +29,6 @@ spring:
         url-pattern: /druid/*        # 配置DruidStatViewServlet
         reset-enable: false        #  禁用HTML页面上的“Reset All”功能
         login-username: admin        # 监控页面登录的用户名
-        login-password: 123456        # 监控页面登录的密码
+        login-password: 1234qwer        # 监控页面登录的密码
         allow: 127.0.0.1        #IP白名单(没有配置或者为空，则允许所有访问)
         deny:        #IP黑名单 (存在共同时，deny优先于allow)
