--- a/oes-start/src/main/resources/application-test.yml
+++ b/oes-start/src/main/resources/application-test.yml
@@ -32,3 +32,6 @@ spring:
         login-password: 123456        # 监控页面登录的密码
         allow: 127.0.0.1        #IP白名单(没有配置或者为空，则允许所有访问)
         deny:        #IP黑名单 (存在共同时，deny优先于allow)
+
+system:
+  env: test
