--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
                 <artifactId>oes-common</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.oes</groupId>
+                <artifactId>oes-gateway</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
 <!--            <dependency>-->
 <!--                <groupId>com.alibaba.cloud</groupId>-->
@@ -71,6 +76,13 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>1.2.8</version>
             </dependency>
+
+            <!-- shiro鉴权 -->
+<!--            <dependency>-->
+<!--                <groupId>org.apache.shiro</groupId>-->
+<!--                <artifactId>shiro-spring</artifactId>-->
+<!--                <version>1.8.0</version>-->
+<!--            </dependency>-->
         </dependencies>
     </dependencyManagement>
 
