--- a/pom.xml
+++ b/pom.xml
@@ -79,11 +79,18 @@
             </dependency>
 
             <!-- shiro鉴权 -->
-<!--            <dependency>-->
-<!--                <groupId>org.apache.shiro</groupId>-->
-<!--                <artifactId>shiro-spring</artifactId>-->
-<!--                <version>1.8.0</version>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring</artifactId>
+                <version>1.8.0</version>
+            </dependency>
+
+            <!-- 工具 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>1.2.78</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
