--- a/oes-start/pom.xml
+++ b/oes-start/pom.xml
@@ -62,10 +62,14 @@
         </dependency>
 
         <!-- shiro鉴权 -->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.shiro</groupId>-->
-<!--            <artifactId>shiro-spring</artifactId>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.crazycake</groupId>
+            <artifactId>shiro-redis</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
