--- a/oes-biz/pom.xml
+++ b/oes-biz/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
 
         <!-- spring 相关 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
         <!-- redis -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
