--- a/oes-start/src/main/resources/application-dev.yml
+++ b/oes-start/src/main/resources/application-dev.yml
@@ -55,10 +55,17 @@ spring:
     # 连接超时时间（毫秒）
     timeout: 5000
 
+  # 邮件设置
+  mail:
+    host: smtp.qq.com
+    username: 941197279@qq.com
+    password: uvuxslkfwoxnbcbg
+    default-encoding: utf-8
+
 # 系统常量配置
 oes:
   env: dev
-  enable-redis-cache: false
+  enable-redis-cache: true
   shiro:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
