--- a/oes-start/pom.xml
+++ b/oes-start/pom.xml
@@ -66,6 +66,11 @@
             <groupId>org.crazycake</groupId>
             <artifactId>shiro-redis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
