--- a/oes-start/src/main/resources/application-dev.yml
+++ b/oes-start/src/main/resources/application-dev.yml
@@ -69,3 +69,7 @@ oes:
   shiro:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
+  minio:
+    endpoint: http://192.168.1.9:9090
+    root-user: minioadmin
+    root-password: minioadmin
