--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
                 <artifactId>fastjson</artifactId>
                 <version>1.2.78</version>
             </dependency>
+
+            <!-- MinIO存储 -->
+            <dependency>
+                <groupId>io.minio</groupId>
+                <artifactId>minio</artifactId>
+                <version>8.3.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
