--- a/oes-start/pom.xml
+++ b/oes-start/pom.xml
@@ -73,6 +73,10 @@
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.alibaba</groupId>
