--- a/oes-start/src/main/resources/application-prod.yml
+++ b/oes-start/src/main/resources/application-prod.yml
@@ -1,4 +1,10 @@
 spring:
+  servlet:
+    multipart:
+      enabled: true #开启文件上传
+      max-file-size: 500MB
+      max-request-size: 500MB
+
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
@@ -29,7 +35,7 @@ spring:
         url-pattern: /druid/*        # 配置DruidStatViewServlet
         reset-enable: false        #  禁用HTML页面上的“Reset All”功能
         login-username: admin        # 监控页面登录的用户名
-        login-password: 1234qwer        # 监控页面登录的密码
+        login-password: 123456        # 监控页面登录的密码
         allow: 127.0.0.1        #IP白名单(没有配置或者为空，则允许所有访问)
         deny:        #IP黑名单 (存在共同时，deny优先于allow)
 
@@ -55,9 +61,21 @@ spring:
     # 连接超时时间（毫秒）
     timeout: 5000
 
+  # 邮件设置
+  mail:
+    host: smtp.qq.com
+    username: 941197279@qq.com
+    password: uvuxslkfwoxnbcbg
+    default-encoding: utf-8
+
 # 系统常量配置
 oes:
-  env: prod
+  env: dev
+  enable-redis-cache: true
   shiro:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
+  minio:
+    endpoint: http://192.168.1.9:9090
+    root-user: minioadmin
+    root-password: minioadmin
