--- a/oes-start/src/main/resources/application-dev.yml
+++ b/oes-start/src/main/resources/application-dev.yml
@@ -65,7 +65,7 @@ spring:
   mail:
     host: smtp.qq.com
     username: 941197279@qq.com
-    password: rpsvmiypfnocbfgi
+    password:
     default-encoding: utf-8
 
 # 系统常量配置
@@ -76,6 +76,6 @@ oes:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
   minio:
-    endpoint: http://124.222.228.84:8081
+    endpoint: http://localhost:8081
     root-user: oesminio
     root-password: oesminioadmin
