--- a/oes-start/src/main/resources/application-prod.yml
+++ b/oes-start/src/main/resources/application-prod.yml
@@ -9,7 +9,7 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://124.222.228.84:3306/oes_db?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
+      url: jdbc:mysql://localhost:3306/oes_db?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
       username: root
       password: oesmysqladmin
       # 连接池配置
@@ -43,7 +43,7 @@ spring:
     # Redis数据库索引（默认为 0）
     database: 0
     # Redis服务器地址
-    host: 124.222.228.84
+    host: localhost
     # Redis服务器连接端口
     port: 6379
     # Redis 密码
@@ -65,7 +65,7 @@ spring:
   mail:
     host: smtp.qq.com
     username: 941197279@qq.com
-    password: rpsvmiypfnocbfgi
+    password:
     default-encoding: utf-8
 
 # 系统常量配置
@@ -76,6 +76,6 @@ oes:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
   minio:
-    endpoint: http://121.40.126.91:8081
+    endpoint: http://localhost:8081
     root-user: oesminio
     root-password: oesminioadmin
