--- a/oes-start/src/main/resources/application-test.yml
+++ b/oes-start/src/main/resources/application-test.yml
@@ -65,7 +65,7 @@ spring:
   mail:
     host: smtp.qq.com
     username: 941197279@qq.com
-    password: uvuxslkfwoxnbcbg
+    password:
     default-encoding: utf-8
 
 # 系统常量配置
@@ -76,6 +76,6 @@ oes:
     session-timeout: 3600   # session 超时时间，单位为秒
     cookie-timeout: 864000  # rememberMe cookie有效时长，单位为秒
   minio:
-    endpoint: http://192.168.1.9:9090
+    endpoint: http://localhost:9090
     root-user: minioadmin
     root-password: minioadmin
